# VideoPlayer

./: .gitignore  CMakeLists.txt  README.md  README.txt  VideoPlayer.cpp  VideoPlayer.h  VideoWidget.cpp  VideoWidget.h  control_panel.cpp  control_panel.h  frame_indexer.cpp  frame_indexer.h  main.cpp  player.h  position_slider.cpp  position_slider.h  qmediaplaylist.h  thumbnail.cpp  thumbnail.h  video_player.cpp  video_player.h  videoplayer.cpp  videoplayer.h  vp.rc
SDL_way/: CMakeLists.txt  hello.c  main.cpp  video.cpp  video.h  video.hpp
VideoGraphicsItemWay/: VideoWidget.cpp  videoplayer.cpp  videoplayer.h
VideoWidgetWay/: CMakeLists.txt  main.cpp  videoplayer.cpp  videoplayer.h
VulkanWay/: CMakeLists.txt  main.cpp
ffmpeg/: ffplay.c  main.c
